--- a/index.html
+++ b/index.html
@@ -1,38 +1,225 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meyvelerin Faydaları</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<title>Elite Cyber Profile</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+:root{
+    --red:#ff0033;
+    --green:#00ff88;
+    --white:#ffffff;
+    --black:#050505;
+}
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:'Orbitron',sans-serif;
+}
+
+body{
+    background:radial-gradient(circle at top, #0a0a0a, #000);
+    color:var(--white);
+    overflow-x:hidden;
+}
+
+/* NAV */
+nav{
+    position:fixed;
+    top:0;
+    width:100%;
+    padding:18px;
+    background:rgba(0,0,0,0.85);
+    display:flex;
+    justify-content:center;
+    gap:40px;
+    border-bottom:1px solid var(--green);
+    z-index:999;
+}
+
+nav a{
+    color:var(--white);
+    text-decoration:none;
+    letter-spacing:2px;
+    position:relative;
+}
+
+nav a::after{
+    content:"";
+    position:absolute;
+    left:0;
+    bottom:-5px;
+    width:0;
+    height:2px;
+    background:var(--green);
+    transition:.3s;
+}
+
+nav a:hover::after{
+    width:100%;
+}
+
+/* SECTIONS */
+section{
+    min-height:100vh;
+    padding:120px 10%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+}
+
+/* HERO */
+.hero{
+    text-align:left;
+}
+
+.hero h1{
+    font-size:4em;
+    color:var(--green);
+    text-shadow:0 0 30px var(--green);
+}
+
+.hero h2{
+    margin-top:10px;
+    color:var(--red);
+    letter-spacing:3px;
+}
+
+.hero p{
+    max-width:600px;
+    margin-top:20px;
+    line-height:1.8;
+    color:#ccc;
+}
+
+/* GLITCH */
+.glitch{
+    animation:glitch 1.5s infinite;
+}
+
+@keyframes glitch{
+    0%{text-shadow:2px 0 var(--red);}
+    50%{text-shadow:-2px 0 var(--green);}
+    100%{text-shadow:2px 0 var(--red);}
+}
+
+/* INFO GRID */
+.grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    gap:30px;
+    margin-top:50px;
+}
+
+.box{
+    border:1px solid var(--green);
+    padding:25px;
+    background:rgba(0,0,0,0.8);
+    box-shadow:0 0 25px rgba(0,255,136,0.2);
+    transition:.4s;
+}
+
+.box:hover{
+    transform:translateY(-10px);
+    box-shadow:0 0 40px var(--green);
+}
+
+/* BUTTON */
+.btn{
+    display:inline-block;
+    margin-top:30px;
+    padding:14px 30px;
+    border:1px solid var(--red);
+    color:var(--white);
+    text-decoration:none;
+    letter-spacing:2px;
+    transition:.3s;
+}
+
+.btn:hover{
+    background:var(--red);
+    box-shadow:0 0 25px var(--red);
+}
+
+/* FOOTER */
+footer{
+    padding:30px;
+    text-align:center;
+    border-top:1px solid var(--green);
+    background:#000;
+    color:#777;
+}
+</style>
 </head>
+
 <body>
-    <header>
-        <h1>Meyvelerin Faydaları</h1>
-        <nav>
-            <ul>
-                <li><a href="#elma">Elma</a></li>
-                <li><a href="#muz">Muz</a></li>
-                <li><a href="#portakal">Portakal</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="elma">
-            <h2>Elmanın Faydaları</h2>
-            <p>Elma, lif açısından zengin bir meyvedir ve sindirim sistemine fayda sağlar.</p>
-        </section>
-        <section id="muz">
-            <h2>Muzun Faydaları</h2>
-            <p>Muz, potasyum kaynağıdır ve kalp sağlığını destekler.</p>
-        </section>
-        <section id="portakal">
-            <h2>Portakalın Faydaları</h2>
-            <p>Portakal, C vitamini deposudur ve bağışıklık sistemini güçlendirir.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 Meyve Bilgi Sitesi</p>
-    </footer>
+
+<nav>
+    <a href="#home">HOME</a>
+    <a href="#about">ABOUT</a>
+    <a href="#profile">PROFILE</a>
+    <a href="#contact">CONTACT</a>
+</nav>
+
+<section id="home" class="hero">
+    <h1 class="glitch">GHOST ORGİNAL</h1>
+    <h2>ELITE • HACKER • GAMER</h2>
+    <p>
+       
+        Bu site sıradan değil -- bir kimlik.
+    </p>
+    <a class="btn" href="#about">KEŞFET</a>
+</section>
+
+<section id="about">
+    <h1 style="color:var(--green)">HAKKIMDA</h1>
+    <div class="grid">
+        <div class="box">
+            <h3>İsim</h3>
+            <p>Ghost </p>
+        </div>
+        <div class="box">
+            <h3>Meslek</h3>
+            <p>Oyuncu • Yazılımcı</p>
+        </div>
+        <div class="box">
+            <h3>Uzmanlık</h3>
+            <p>PUBG • Cyber • Ticaret </p>
+        </div>
+    </div>
+</section>
+
+<section id="profile">
+    <h1 style="color:var(--red)">PROFİL</h1>
+    <div class="grid">
+        <div class="box">
+            <h3>Amacım</h3>
+            <p>Kanalımı büyütmek ve elit içerikler üretmek ve ınsanlara yardımcı olmak.</p>
+        </div>
+        <div class="box">
+            <h3>İlgi Alanları</h3>
+            <p>Oyun, teknoloji, Yazılımcılık.</p>
+        </div>
+        <div class="box">
+            <h3>Bilgi</h3>
+            <p>Sorularınız Yazsa Kanalıma gelip sorabilirsiniz.</p>
+        </div>
+    </div>
+</section>
+
+<section id="contact">
+    <h1 style="color:var(--green)">KANAL</h1>
+    <p>İçeriklerimi buradan takip et</p>
+    <a class="btn" href="https://t.me/ghostorgin" target="_blank">KANALA GİR</a>
+</section>
+
+<footer>
+    © 2026 ELITE CYBER PROFILE
+</footer>
+
 </body>
 </html>
